force-app/main/default/objects/Marketing_Activity__c/Marketing_Activity__c.object-meta.xml
<CustomObject>
    <label>Marketing Activity</label>
    <nameField>
        <displayFormat>MA -{0000}</displayFormat>
        <label>Marketing Activity Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Activity</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>