force-app/main/default/objects/Marketing_Activity__c/fields/Achieve_Count__c.field-meta.xml
<CustomField>
    <fullName>Achieve_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Achieve Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>