force-app/main/default/objects/Marketing_Activity__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual Meeting</fullName>
            </value>
            <value>
                <fullName>Group Meeting</fullName>
            </value>
            <value>
                <fullName>Pond Visit</fullName>
            </value>
            <value>
                <fullName>Testimonial Videos / Photos</fullName>
            </value>
            <value>
                <fullName>Bazar Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>