force-app/main/default/objects/Marketing_Activity__c/fields/Area_Sales_Manger__c.field-meta.xml
<CustomField>
    <fullName>Area_Sales_Manger__c</fullName>
    <label>Area Sales Manger</label>
    <referenceTo>Area_Sales_Manger__c</referenceTo>
    <relationshipLabel>Marketing Activity</relationshipLabel>
    <relationshipName>Marketing_Activity</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>