force-app/main/default/objects/Marketing_Activity__c/fields/Created_Date_Month__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Month__c</fullName>
    <formula>MONTH(DATEVALUE(CreatedDate) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>