force-app/main/default/objects/Marketing_Activity__c/fields/Leads_Count__c.field-meta.xml
<CustomField>
    <fullName>Leads_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Leads Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>