force-app/main/default/objects/Marketing_Activity__c/fields/Leads_Enter_Date__c.field-meta.xml
<CustomField>
    <fullName>Leads_Enter_Date__c</fullName>
    <label>Leads Enter Date</label>
    <type>Date</type>
</CustomField>