force-app/main/default/objects/Marketing_Activity__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <label>Month</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>April 2023-24</fullName>
            </value>
            <value>
                <fullName>May 2023-24</fullName>
            </value>
            <value>
                <fullName>June 2023-24</fullName>
            </value>
            <value>
                <fullName>July 2023-24</fullName>
            </value>
            <value>
                <fullName>August 2023-24</fullName>
            </value>
            <value>
                <fullName>September 2023-24</fullName>
            </value>
            <value>
                <fullName>October 2023-24</fullName>
            </value>
            <value>
                <fullName>November 2023-24</fullName>
            </value>
            <value>
                <fullName>December 2023-24</fullName>
            </value>
            <value>
                <fullName>January 2024-25</fullName>
            </value>
            <value>
                <fullName>February 2024-25</fullName>
            </value>
            <value>
                <fullName>March 2024-25</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>