force-app/main/default/objects/Marketing_Activity__c/fields/Tehsil__c.field-meta.xml
<CustomField>
    <fullName>Tehsil__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Tehsil</label>
    <referenceTo>Tehsil__c</referenceTo>
    <relationshipLabel>Marketing Activity</relationshipLabel>
    <relationshipName>Marketing_Activity</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>